REWIND-155: added achievements
