# Backend/api-gateway-service/docs/swagger.json
@@ -2014,6 +2014,49 @@
                 }
             }
         },
+        "/api/users/achievements": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Returns a list of achievements earned by the authenticated user.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get user achievements.",
+                "responses": {
+                    "200": {
+                        "description": "List of achievements",
+                        "schema": {
+                            "$ref": "#/definitions/responses.GetUserAchievementsResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized - User not authenticated",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found - User not found",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/users/avatar": {
             "delete": {
                 "security": [
@@ -3112,6 +3155,17 @@
                 }
             }
         },
+        "responses.GetUserAchievementsResponse": {
+            "type": "object",
+            "properties": {
+                "achievements": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/responses.UserAchievement"
+                    }
+                }
+            }
+        },
         "responses.GetUserByIDResponse": {
             "type": "object",
             "properties": {
@@ -3411,6 +3465,24 @@
             "properties": {
                 "success": {
                     "type": "boolean"
+                }
+            }
+        },
+        "responses.UserAchievement": {
+            "type": "object",
+            "properties": {
+                "icon": {
+                    "description": "URL к иконке",
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_unlocked": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
